--- a/Petrol station/src/assets/css/input.css
+++ b/Petrol station/src/assets/css/input.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
-    .container_limiter {
-        @apply container mx-auto max-w-screen-large px-5 sm:px-6 ipad:px-8 desktop:px-10;
-      }
+  .container_limiter {
+    @apply container mx-auto max-w-screen-large px-5 sm:px-6 ipad:px-8 desktop:px-10;
+  }
+  .map-scroll::-webkit-scrollbar {
+    display: hidden;
+    width: 0px;
+  }
+  
 }
