--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -792,6 +792,10 @@ video {
   z-index: 1000;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -810,6 +814,16 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mb-4 {
@@ -842,6 +856,26 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .block {
@@ -911,6 +945,38 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-\[330px\] {
+  height: 330px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[250px\] {
+  height: 250px;
+}
+
+.min-h-full {
+  min-height: 100%;
+}
+
+.min-h-0 {
+  min-height: 0px;
 }
 
 .w-1\/2 {
@@ -998,8 +1064,40 @@ video {
   width: max-content;
 }
 
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-\[330px\] {
+  width: 330px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.min-w-0 {
+  min-width: 0px;
+}
+
 .max-w-xl {
   max-width: 36rem;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .origin-\[0\] {
@@ -1072,6 +1170,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
@@ -1090,6 +1192,34 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-0 {
+  gap: 0px;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
 }
 
 .gap-y-3 {
@@ -1175,8 +1305,16 @@ video {
   border-color: rgb(100 116 139 / var(--tw-divide-opacity));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded {
@@ -1294,6 +1432,29 @@ video {
   background-color: rgb(255 255 255 / 0.7);
 }
 
+.bg-\[\#bcc2e3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 194 227 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#E8EAF5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 234 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FED9A5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 217 165 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(https\:\/\/file\.rendit\.io\/n\/2JR0ngGhLJSOKJuiiqSk\.svg\)\] {
+  background-image: url(https://file.rendit.io/n/2JR0ngGhLJSOKJuiiqSk.svg);
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -1364,6 +1525,11 @@ video {
   padding-bottom: 2.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1404,6 +1570,50 @@ video {
   padding-top: 1.5rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-0\.5 {
+  padding-left: 0.125rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-48 {
+  padding-left: 12rem;
+}
+
+.pl-56 {
+  padding-left: 14rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1418,6 +1628,10 @@ video {
 
 .font-pt {
   font-family: 'PT Sans', sans-serif;
+}
+
+.font-\[\'Barlow\'\] {
+  font-family: 'Barlow';
 }
 
 .text-2xl {
@@ -1464,6 +1678,16 @@ video {
   line-height: 1rem;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1478,6 +1702,70 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.leading-\[28\.7px\] {
+  line-height: 28.7px;
+}
+
+.leading-\[34\.5px\] {
+  line-height: 34.5px;
+}
+
+.leading-\[2\.7px\] {
+  line-height: 2.7px;
+}
+
+.leading-\[25\.7px\] {
+  line-height: 25.7px;
+}
+
+.tracking-\[2\.9\] {
+  letter-spacing: 2.9;
+}
+
+.tracking-\[2\] {
+  letter-spacing: 2;
+}
+
+.tracking-\[2\.5\] {
+  letter-spacing: 2.5;
+}
+
+.tracking-\[2\.5p\] {
+  letter-spacing: 2.5p;
+}
+
+.tracking-\[2\.5px\] {
+  letter-spacing: 2.5px;
+}
+
+.tracking-\[2\.px\] {
+  letter-spacing: 2.px;
+}
+
+.tracking-\[2\.3px\] {
+  letter-spacing: 2.3px;
+}
+
+.tracking-\[2px\] {
+  letter-spacing: 2px;
+}
+
+.tracking-\[1px\] {
+  letter-spacing: 1px;
+}
+
+.tracking-\[1\.px\] {
+  letter-spacing: 1.px;
+}
+
+.tracking-\[1\.7px\] {
+  letter-spacing: 1.7px;
 }
 
 .text-\[\#0B8826\] {
@@ -1559,6 +1847,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#E8EAF5\] {
+  --tw-text-opacity: 1;
+  color: rgb(232 234 245 / var(--tw-text-opacity));
+}
+
 .placeholder-slate-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(148 163 184 / var(--tw-placeholder-opacity));
@@ -1575,6 +1868,10 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.bg-blend-normal {
+  background-blend-mode: normal;
 }
 
 .shadow-md {
@@ -1604,6 +1901,12 @@ video {
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_3px_1px_rgba\(0\2c _0\2c _0\2c _0\.4\)\] {
+  --tw-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.4);
+  --tw-shadow-colored: 0px 0px 3px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
