--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -1710,6 +1710,10 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 3.5rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -2537,6 +2541,10 @@ input[type="range"]::-ms-fill-lower {
 
 .cursor-default {
   cursor: default;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .cursor-pointer {
@@ -3743,10 +3751,6 @@ input[type="range"]::-ms-fill-lower {
   padding-bottom: 1.25rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -4281,6 +4285,11 @@ input[type="range"]::-ms-fill-lower {
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(59 113 202 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(240 82 82 / var(--tw-text-opacity));
 }
 
 .text-red-600 {
@@ -6649,6 +6658,11 @@ input[type="range"]::-ms-fill-lower {
          column-gap: 1.25rem;
   }
 
+  .mini\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
   .mini\:gap-y-0 {
     row-gap: 0px;
   }
@@ -6691,6 +6705,10 @@ input[type="range"]::-ms-fill-lower {
     margin-left: calc(2.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .mini\:rounded-none {
+    border-radius: 0px;
+  }
+
   .mini\:border-r-2 {
     border-right-width: 2px;
   }
@@ -6698,6 +6716,11 @@ input[type="range"]::-ms-fill-lower {
   .mini\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .mini\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .mini\:px-10 {
@@ -6767,6 +6790,10 @@ input[type="range"]::-ms-fill-lower {
 
   .mini\:pr-16 {
     padding-right: 4rem;
+  }
+
+  .mini\:pr-24 {
+    padding-right: 6rem;
   }
 
   .mini\:pt-5 {
